# medical-bills-organiser

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  setup.sh
docs/: LLM_INTEGRATION.md
src/medical_file_sorter/: __init__.py  image_processor.py  llm_sorter.py  main.py  pdf_merger.py
